--- a/output.css
+++ b/output.css
@@ -600,6 +600,10 @@ video {
   pointer-events: none;
 }
 
+.visible {
+  visibility: visible;
+}
+
 .fixed {
   position: fixed;
 }
@@ -616,8 +620,24 @@ video {
   inset: 0px;
 }
 
-.inset-4 {
-  inset: 1rem;
+.-bottom-1 {
+  bottom: -0.25rem;
+}
+
+.-left-12 {
+  left: -3rem;
+}
+
+.-right-12 {
+  right: -3rem;
+}
+
+.-top-14 {
+  top: -3.5rem;
+}
+
+.-top-8 {
+  top: -2rem;
 }
 
 .bottom-0 {
@@ -628,64 +648,16 @@ video {
   bottom: 2.5rem;
 }
 
-.bottom-16 {
-  bottom: 4rem;
-}
-
-.bottom-2 {
-  bottom: 0.5rem;
-}
-
-.bottom-20 {
-  bottom: 5rem;
-}
-
-.bottom-24 {
-  bottom: 6rem;
-}
-
-.bottom-6 {
-  bottom: 1.5rem;
-}
-
-.bottom-8 {
-  bottom: 2rem;
-}
-
 .left-0 {
   left: 0px;
-}
-
-.left-1\/2 {
-  left: 50%;
 }
 
 .left-12 {
   left: 3rem;
 }
 
-.left-16 {
-  left: 4rem;
-}
-
-.left-2 {
-  left: 0.5rem;
-}
-
-.left-20 {
-  left: 5rem;
-}
-
-.left-32 {
-  left: 8rem;
-}
-
 .left-4 {
   left: 1rem;
-}
-
-.left-6 {
-  left: 1.5rem;
 }
 
 .left-8 {
@@ -696,248 +668,36 @@ video {
   right: 0px;
 }
 
-.right-12 {
-  right: 3rem;
-}
-
-.right-16 {
-  right: 4rem;
-}
-
-.right-20 {
-  right: 5rem;
-}
-
-.right-28 {
-  right: 7rem;
-}
-
 .right-4 {
   right: 1rem;
-}
-
-.right-6 {
-  right: 1.5rem;
-}
-
-.right-8 {
-  right: 2rem;
 }
 
 .right-\[-10px\] {
   right: -10px;
 }
 
+.right-\[16rem\] {
+  right: 16rem;
+}
+
 .top-1\/2 {
   top: 50%;
-}
-
-.top-12 {
-  top: 3rem;
-}
-
-.top-16 {
-  top: 4rem;
-}
-
-.top-20 {
-  top: 5rem;
-}
-
-.top-28 {
-  top: 7rem;
-}
-
-.top-32 {
-  top: 8rem;
-}
-
-.top-6 {
-  top: 1.5rem;
-}
-
-.top-8 {
-  top: 2rem;
-}
-
-.top-\[85px\] {
-  top: 85px;
-}
-
-.-right-12 {
-  right: -3rem;
-}
-
-.bottom-\[-2rem\] {
-  bottom: -2rem;
-}
-
-.right-\[-2rem\] {
-  right: -2rem;
-}
-
-.bottom-4 {
-  bottom: 1rem;
 }
 
 .top-10 {
   top: 2.5rem;
 }
 
-.right-32 {
-  right: 8rem;
-}
-
-.right-36 {
-  right: 9rem;
-}
-
-.bottom-32 {
-  bottom: 8rem;
-}
-
-.bottom-36 {
-  bottom: 9rem;
-}
-
-.bottom-3 {
-  bottom: 0.75rem;
-}
-
-.top-64 {
-  top: 16rem;
-}
-
-.top-52 {
-  top: 13rem;
-}
-
-.top-\[\] {
-  top: ;
-}
-
-.top-\[re\] {
-  top: re;
-}
-
-.top-\[36rem\] {
-  top: 36rem;
-}
-
-.bottom-\[36rem\] {
-  bottom: 36rem;
-}
-
-.bottom-\[6rem\] {
-  bottom: 6rem;
-}
-
-.bottom-\[rem\] {
-  bottom: rem;
-}
-
-.bottom-\[14rem\] {
-  bottom: 14rem;
-}
-
-.bottom-\[12rem\] {
-  bottom: 12rem;
-}
-
-.bottom-\[0rem\] {
-  bottom: 0rem;
-}
-
-.top-\[0rem\] {
-  top: 0rem;
-}
-
-.top-\[12rem\] {
-  top: 12rem;
-}
-
-.top-\[16rem\] {
-  top: 16rem;
-}
-
-.top-\[1rem\] {
-  top: 1rem;
-}
-
-.top-\[20rem\] {
-  top: 20rem;
+.top-16 {
+  top: 4rem;
 }
 
 .top-\[24rem\] {
   top: 24rem;
 }
 
-.right-\[\] {
-  right: ;
-}
-
-.right-\[24rem\] {
-  right: 24rem;
-}
-
-.right-\[26rem\] {
-  right: 26rem;
-}
-
-.right-\[2rem\] {
-  right: 2rem;
-}
-
-.right-\[20rem\] {
-  right: 20rem;
-}
-
-.right-\[0rem\] {
-  right: 0rem;
-}
-
-.right-\[18rem\] {
-  right: 18rem;
-}
-
-.right-\[16rem\] {
-  right: 16rem;
-}
-
-.-bottom-1 {
-  bottom: -0.25rem;
-}
-
-.-left-12 {
-  left: -3rem;
-}
-
-.-top-20 {
-  top: -5rem;
-}
-
-.-top-8 {
-  top: -2rem;
-}
-
-.-top-12 {
-  top: -3rem;
-}
-
-.-top-14 {
-  top: -3.5rem;
-}
-
-.-right-14 {
-  right: -3.5rem;
-}
-
-.-right-1 {
-  right: -0.25rem;
-}
-
-.-right-16 {
-  right: -4rem;
+.top-\[85px\] {
+  top: 85px;
 }
 
 .z-10 {
@@ -966,10 +726,6 @@ video {
   margin-top: -6rem;
 }
 
-.mb-1 {
-  margin-bottom: 0.25rem;
-}
-
 .mb-12 {
   margin-bottom: 3rem;
 }
@@ -988,10 +744,6 @@ video {
 
 .mb-8 {
   margin-bottom: 2rem;
-}
-
-.mr-1 {
-  margin-right: 0.25rem;
 }
 
 .mr-2 {
@@ -1014,22 +766,6 @@ video {
   margin-top: 2rem;
 }
 
-.mr-20 {
-  margin-right: 5rem;
-}
-
-.mr-32 {
-  margin-right: 8rem;
-}
-
-.mr-3 {
-  margin-right: 0.75rem;
-}
-
-.mr-44 {
-  margin-right: 11rem;
-}
-
 .block {
   display: block;
 }
@@ -1046,12 +782,8 @@ video {
   display: grid;
 }
 
-.h-1 {
-  height: 0.25rem;
-}
-
-.h-2 {
-  height: 0.5rem;
+.hidden {
+  display: none;
 }
 
 .h-20 {
@@ -1062,24 +794,8 @@ video {
   height: 0.75rem;
 }
 
-.h-32 {
-  height: 8rem;
-}
-
-.h-4 {
-  height: 1rem;
-}
-
 .h-5 {
   height: 1.25rem;
-}
-
-.h-52 {
-  height: 13rem;
-}
-
-.h-6 {
-  height: 1.5rem;
 }
 
 .h-64 {
@@ -1088,6 +804,10 @@ video {
 
 .h-72 {
   height: 18rem;
+}
+
+.h-\[16rem\] {
+  height: 16rem;
 }
 
 .h-\[220px\] {
@@ -1102,6 +822,14 @@ video {
   height: 350px;
 }
 
+.h-\[86\%\] {
+  height: 86%;
+}
+
+.h-\[8rem\] {
+  height: 8rem;
+}
+
 .h-fit {
   height: -moz-fit-content;
   height: fit-content;
@@ -1111,76 +839,16 @@ video {
   height: 100%;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-\[90\] {
-  height: 90;
-}
-
-.h-\[\%\] {
-  height: %;
-}
-
-.h-\[90\%\] {
-  height: 90%;
-}
-
-.h-\[92\%\] {
-  height: 92%;
-}
-
-.h-\[9\%\] {
-  height: 9%;
-}
-
-.h-\[86\%\] {
-  height: 86%;
-}
-
-.h-\[8\%\] {
-  height: 8%;
-}
-
-.h-\[88\%\] {
-  height: 88%;
-}
-
-.h-\[87\%\] {
-  height: 87%;
-}
-
-.h-\[\] {
-  height: ;
-}
-
-.h-\[2\] {
-  height: 2;
-}
-
-.h-\[20rem\] {
-  height: 20rem;
-}
-
-.h-\[16rem\] {
-  height: 16rem;
-}
-
 .min-h-screen {
   min-height: 100vh;
-}
-
-.w-1 {
-  width: 0.25rem;
 }
 
 .w-12 {
   width: 3rem;
 }
 
-.w-2 {
-  width: 0.5rem;
+.w-14 {
+  width: 3.5rem;
 }
 
 .w-3 {
@@ -1199,16 +867,8 @@ video {
   width: 13rem;
 }
 
-.w-6 {
-  width: 1.5rem;
-}
-
 .w-64 {
   width: 16rem;
-}
-
-.w-80 {
-  width: 20rem;
 }
 
 .w-\[260px\] {
@@ -1217,6 +877,14 @@ video {
 
 .w-\[26em\] {
   width: 26em;
+}
+
+.w-\[26rem\] {
+  width: 26rem;
+}
+
+.w-\[30rem\] {
+  width: 30rem;
 }
 
 .w-\[400px\] {
@@ -1239,84 +907,20 @@ video {
   width: 70%;
 }
 
-.w-\[88\%\] {
-  width: 88%;
-}
-
-.w-full {
-  width: 100%;
-}
-
-.w-8 {
-  width: 2rem;
-}
-
-.w-72 {
-  width: 18rem;
-}
-
-.w-7 {
-  width: 1.75rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[80px\] {
-  width: 80px;
-}
-
-.w-\[80\] {
-  width: 80;
-}
-
 .w-\[80\%\] {
   width: 80%;
+}
+
+.w-\[88\%\] {
+  width: 88%;
 }
 
 .w-\[90\%\] {
   width: 90%;
 }
 
-.w-96 {
-  width: 24rem;
-}
-
-.w-\[90\] {
-  width: 90;
-}
-
-.w-\[0\%\] {
-  width: 0%;
-}
-
-.w-\[10rem\] {
-  width: 10rem;
-}
-
-.w-\[50rem\] {
-  width: 50rem;
-}
-
-.w-\[30rem\] {
-  width: 30rem;
-}
-
-.w-\[0rem\] {
-  width: 0rem;
-}
-
-.w-\[26rem\] {
-  width: 26rem;
-}
-
-.w-\[24rem\] {
-  width: 24rem;
-}
-
-.max-w-2xl {
-  max-width: 42rem;
+.w-full {
+  width: 100%;
 }
 
 .max-w-3xl {
@@ -1331,12 +935,8 @@ video {
   max-width: 72rem;
 }
 
-.max-w-4xl {
-  max-width: 56rem;
-}
-
-.max-w-xl {
-  max-width: 36rem;
+.max-w-\[34\%\] {
+  max-width: 34%;
 }
 
 .max-w-xs {
@@ -1351,13 +951,13 @@ video {
   flex-grow: 1;
 }
 
-.-translate-x-1\/2 {
-  --tw-translate-x: -50%;
+.-translate-x-20 {
+  --tw-translate-x: -5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-translate-x-20 {
-  --tw-translate-x: -5rem;
+.-translate-x-24 {
+  --tw-translate-x: -6rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1366,8 +966,18 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.-translate-y-14 {
+  --tw-translate-y: -3.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .-translate-y-2 {
   --tw-translate-y: -0.5rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.translate-x-2 {
+  --tw-translate-x: 0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1376,13 +986,13 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.translate-y-64 {
-  --tw-translate-y: 16rem;
+.translate-y-2 {
+  --tw-translate-y: 0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.-rotate-3 {
-  --tw-rotate: -3deg;
+.translate-y-64 {
+  --tw-translate-y: 16rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1396,11 +1006,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-.rotate-2 {
-  --tw-rotate: 2deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 .rotate-3 {
   --tw-rotate: 3deg;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1408,6 +1013,12 @@ video {
 
 .rotate-45 {
   --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.scale-0 {
+  --tw-scale-x: 0;
+  --tw-scale-y: 0;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1427,6 +1038,109 @@ video {
 
 .animate-pattern-diagonal {
   animation: pattern-move 4s linear infinite;
+}
+
+@keyframes pop {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  60% {
+    transform: scale(1.1);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.animate-pop {
+  animation: pop 0.5s ease-out forwards;
+}
+
+@keyframes pop-then-float-infinite {
+  0% {
+    transform: scale(0) translateY(0px);
+    opacity: 0;
+  }
+
+  12.5% {
+    transform: scale(1.0) translateY(0px);
+    opacity: 1;
+  }
+
+  25% {
+    transform: scale(1) translateY(0px);
+    opacity: 1;
+  }
+
+  37.5% {
+    transform: scale(1) translateY(-8px);
+    opacity: 1;
+  }
+
+  50% {
+    transform: scale(1) translateY(0px);
+    opacity: 1;
+  }
+
+  62.5% {
+    transform: scale(1) translateY(-8px);
+    opacity: 1;
+  }
+
+  75% {
+    transform: scale(1) translateY(0px);
+    opacity: 1;
+  }
+
+  87.5% {
+    transform: scale(1) translateY(-8px);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1) translateY(0px);
+    opacity: 1;
+  }
+}
+
+.animate-pop-then-float-infinite {
+  animation: pop-then-float-infinite 6s ease-in-out forwards;
+}
+
+@keyframes pulse {
+  50% {
+    opacity: .5;
+  }
+}
+
+.animate-pulse {
+  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
+}
+
+@keyframes quick-pop {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+
+  70% {
+    transform: scale(1.05);
+    opacity: 1;
+  }
+
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+.animate-quick-pop {
+  animation: quick-pop 0.3s ease-out forwards;
 }
 
 .cursor-pointer {
@@ -1463,6 +1177,10 @@ video {
 
 .justify-items-center {
   justify-items: center;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-2 {
@@ -1516,16 +1234,12 @@ video {
   border-width: 3px;
 }
 
-.border {
-  border-width: 1px;
+.border-b-2 {
+  border-bottom-width: 2px;
 }
 
 .border-l {
   border-left-width: 1px;
-}
-
-.border-b-2 {
-  border-bottom-width: 2px;
 }
 
 .border-r-2 {
@@ -1545,14 +1259,14 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
 }
 
+.border-brown {
+  --tw-border-opacity: 1;
+  border-color: rgb(221 190 169 / var(--tw-border-opacity, 1));
+}
+
 .border-dark-brown {
   --tw-border-opacity: 1;
   border-color: rgb(111 78 55 / var(--tw-border-opacity, 1));
-}
-
-.border-gray-300 {
-  --tw-border-opacity: 1;
-  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
 }
 
 .border-green-200 {
@@ -1563,16 +1277,6 @@ video {
 .border-white {
   --tw-border-opacity: 1;
   border-color: rgb(255 253 239 / var(--tw-border-opacity, 1));
-}
-
-.border-brown {
-  --tw-border-opacity: 1;
-  border-color: rgb(221 190 169 / var(--tw-border-opacity, 1));
-}
-
-.border-green {
-  --tw-border-opacity: 1;
-  border-color: rgb(229 235 189 / var(--tw-border-opacity, 1));
 }
 
 .bg-amber-700 {
@@ -1595,11 +1299,6 @@ video {
   background-color: rgb(221 190 169 / var(--tw-bg-opacity, 1));
 }
 
-.bg-gray-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1));
-}
-
 .bg-green {
   --tw-bg-opacity: 1;
   background-color: rgb(229 235 189 / var(--tw-bg-opacity, 1));
@@ -1613,6 +1312,16 @@ video {
 .bg-green-background {
   --tw-bg-opacity: 1;
   background-color: rgb(205 216 183 / var(--tw-bg-opacity, 1));
+}
+
+.bg-off-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 253 239 / var(--tw-bg-opacity, 1));
+}
+
+.bg-off-white-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 241 200 / var(--tw-bg-opacity, 1));
 }
 
 .bg-orange {
@@ -1630,16 +1339,6 @@ video {
   background-color: rgb(217 157 174 / var(--tw-bg-opacity, 1));
 }
 
-.bg-pink-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(253 242 248 / var(--tw-bg-opacity, 1));
-}
-
-.bg-red-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(248 113 113 / var(--tw-bg-opacity, 1));
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 253 239 / var(--tw-bg-opacity, 1));
@@ -1653,10 +1352,6 @@ video {
 .bg-yellow-200 {
   --tw-bg-opacity: 1;
   background-color: rgb(252 222 110 / var(--tw-bg-opacity, 1));
-}
-
-.bg-opacity-80 {
-  --tw-bg-opacity: 0.8;
 }
 
 .bg-\[url\(\'\.\/static\/PixelArt\/boardAndShelves\.png\'\)\] {
@@ -1677,10 +1372,6 @@ video {
 
 .bg-\[url\(\.\/static\/background\.svg\)\] {
   background-image: url(./static/background.svg);
-}
-
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
 }
 
 .bg-pattern {
@@ -1769,6 +1460,11 @@ video {
   padding-right: 2rem;
 }
 
+.px-9 {
+  padding-left: 2.25rem;
+  padding-right: 2.25rem;
+}
+
 .py-1 {
   padding-top: 0.25rem;
   padding-bottom: 0.25rem;
@@ -1779,6 +1475,11 @@ video {
   padding-bottom: 0.5rem;
 }
 
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
+}
+
 .py-8 {
   padding-top: 2rem;
   padding-bottom: 2rem;
@@ -1787,11 +1488,6 @@ video {
 .py-\[3px\] {
   padding-top: 3px;
   padding-bottom: 3px;
-}
-
-.py-3 {
-  padding-top: 0.75rem;
-  padding-bottom: 0.75rem;
 }
 
 .pb-10 {
@@ -1837,11 +1533,6 @@ video {
   line-height: 2.5rem;
 }
 
-.text-base {
-  font-size: 1rem;
-  line-height: 1.5rem;
-}
-
 .text-lg {
   font-size: 1.125rem;
   line-height: 1.75rem;
@@ -1855,11 +1546,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-xs {
-  font-size: 0.75rem;
-  line-height: 1rem;
 }
 
 .font-regular {
@@ -1898,14 +1584,6 @@ video {
   color: rgb(255 253 239 / var(--tw-text-opacity, 1));
 }
 
-.opacity-40 {
-  opacity: 0.4;
-}
-
-.opacity-60 {
-  opacity: 0.6;
-}
-
 .opacity-0 {
   opacity: 0;
 }
@@ -1922,6 +1600,14 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.transition {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .transition-all {
   transition-property: all;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -1934,22 +1620,14 @@ video {
   transition-duration: 150ms;
 }
 
-.transition-transform {
-  transition-property: transform;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
-.transition {
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
-  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  transition-duration: 150ms;
-}
-
 .transition-opacity {
   transition-property: opacity;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-transform {
+  transition-property: transform;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -2028,6 +1706,10 @@ video {
     height: 432px;
   }
 
+  .md\:w-52 {
+    width: 13rem;
+  }
+
   .md\:w-6 {
     width: 1.5rem;
   }
@@ -2067,6 +1749,11 @@ video {
   .md\:px-0 {
     padding-left: 0px;
     padding-right: 0px;
+  }
+
+  .md\:text-2xl {
+    font-size: 1.5rem;
+    line-height: 2rem;
   }
 
   .md\:text-3xl {
