--- a/output.css
+++ b/output.css
@@ -1,10 +1,9 @@
 @font-face {
   font-family: 'Podkova';
-
   font-style: normal;
-
-  src: url("/static/fonts/Podkova/Podkova-VariableFont_wght.ttf") format('truetype');
+  src: url("./static/fonts/Podkova/Podkova-VariableFont_wght.ttf") format('truetype');
 }
+
 
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
