--- a/output.css
+++ b/output.css
@@ -1,9 +1,10 @@
 @font-face {
   font-family: 'Podkova';
-  font-style: normal;
-  src: url("./static/fonts/Podkova/Podkova-VariableFont_wght.ttf") format('truetype');
-}
 
+  font-style: normal;
+
+  src: url("/static/fonts/Podkova/Podkova-VariableFont_wght.ttf") format('truetype');
+}
 
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
