--- a/input.css
+++ b/input.css
@@ -1,7 +1,7 @@
 @font-face {
 	font-family: 'Podkova';
 	font-style: normal;
-	src: url("/static/fonts/Podkova/Podkova-VariableFont_wght.ttf") format('truetype');
+	src: url("./static/fonts/Podkova/Podkova-VariableFont_wght.ttf") format('truetype');
 }
 
 @tailwind base;
