--- a/output.css
+++ b/output.css
@@ -3,7 +3,7 @@
 
   font-style: normal;
 
-  src: url("/static/fonts/Podkova/Podkova-VariableFont_wght.ttf") format('truetype');
+  src: url("./static/fonts/Podkova/Podkova-VariableFont_wght.ttf") format('truetype');
 }
 
 *, ::before, ::after {
@@ -696,10 +696,6 @@ video {
   top: 24rem;
 }
 
-.top-\[85px\] {
-  top: 85px;
-}
-
 .z-10 {
   z-index: 10;
 }
@@ -800,10 +796,6 @@ video {
 
 .h-64 {
   height: 16rem;
-}
-
-.h-72 {
-  height: 18rem;
 }
 
 .h-\[16rem\] {
@@ -1026,20 +1018,6 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
-@keyframes pattern-move {
-  0% {
-    background-position: 0 0;
-  }
-
-  100% {
-    background-position: 64px 64px;
-  }
-}
-
-.animate-pattern-diagonal {
-  animation: pattern-move 4s linear infinite;
-}
-
 @keyframes pop {
   0% {
     transform: scale(0);
@@ -1110,16 +1088,6 @@ video {
 
 .animate-pop-then-float-infinite {
   animation: pop-then-float-infinite 6s ease-in-out forwards;
-}
-
-@keyframes pulse {
-  50% {
-    opacity: .5;
-  }
-}
-
-.animate-pulse {
-  animation: pulse 2s cubic-bezier(0.4, 0, 0.6, 1) infinite;
 }
 
 @keyframes quick-pop {
@@ -1372,10 +1340,6 @@ video {
 
 .bg-\[url\(\.\/static\/background\.svg\)\] {
   background-image: url(./static/background.svg);
-}
-
-.bg-pattern {
-  background-image: url("data:image/svg+xml,%3Csvg width='64' height='64' viewBox='0 0 64 64' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M8 16c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zm33.414-6l5.95-5.95L45.95.636 40 6.586 34.05.636 32.636 2.05 38.586 8l-5.95 5.95 1.414 1.414L40 9.414l5.95 5.95 1.414-1.414L41.414 8zM40 48c4.418 0 8-3.582 8-8s-3.582-8-8-8-8 3.582-8 8 3.582 8 8 8zm0-2c3.314 0 6-2.686 6-6s-2.686-6-6-6-6 2.686-6 6 2.686 6 6 6zM9.414 40l5.95-5.95-1.414-1.414L8 38.586l-5.95-5.95L.636 34.05 6.586 40l-5.95 5.95 1.414 1.414L8 41.414l5.95 5.95 1.414-1.414L9.414 40z' fill='%23ddbea9' fill-opacity='0.4' fill-rule='evenodd'/%3E%3C/svg%3E");
 }
 
 .bg-\[length\:300px_300px\] {
