--- a/output.css
+++ b/output.css
@@ -680,6 +680,10 @@ video {
   right: 16rem;
 }
 
+.top-0 {
+  top: 0px;
+}
+
 .top-1\/2 {
   top: 50%;
 }
@@ -863,6 +867,10 @@ video {
   width: 16rem;
 }
 
+.w-8 {
+  width: 2rem;
+}
+
 .w-\[260px\] {
   width: 260px;
 }
@@ -978,6 +986,11 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.translate-x-4 {
+  --tw-translate-x: 1rem;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .translate-y-2 {
   --tw-translate-y: 0.5rem;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -1037,57 +1050,6 @@ video {
 
 .animate-pop {
   animation: pop 0.5s ease-out forwards;
-}
-
-@keyframes pop-then-float-infinite {
-  0% {
-    transform: scale(0) translateY(0px);
-    opacity: 0;
-  }
-
-  12.5% {
-    transform: scale(1.0) translateY(0px);
-    opacity: 1;
-  }
-
-  25% {
-    transform: scale(1) translateY(0px);
-    opacity: 1;
-  }
-
-  37.5% {
-    transform: scale(1) translateY(-8px);
-    opacity: 1;
-  }
-
-  50% {
-    transform: scale(1) translateY(0px);
-    opacity: 1;
-  }
-
-  62.5% {
-    transform: scale(1) translateY(-8px);
-    opacity: 1;
-  }
-
-  75% {
-    transform: scale(1) translateY(0px);
-    opacity: 1;
-  }
-
-  87.5% {
-    transform: scale(1) translateY(-8px);
-    opacity: 1;
-  }
-
-  100% {
-    transform: scale(1) translateY(0px);
-    opacity: 1;
-  }
-}
-
-.animate-pop-then-float-infinite {
-  animation: pop-then-float-infinite 6s ease-in-out forwards;
 }
 
 @keyframes quick-pop {
